2023-08-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/shifts2.c.in,
	  support/regression/tests/bitintshift.c.in:
	  Improve test coverage for shifts of wide variables.
	* device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rrulonglong.c:
	  Fix choice of endiannness for support functions for shifts of wide variables.

2023-08-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c: fixed compiler warning
	* src/SDCCglobl.h,
	* src/SDCCglue.c,
	* src/SDCCmain.c: moved syntax_only & no_assemble into options
	* src/SDCCopt.c(eBBlockFromiCode): do not call assignRegisters() for
	    --syntax-only

2023-08-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/test-target.mk: do not remove ihx files that are in svn

2023-08-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c: added --syntax-only option, implements RFE #886
	* doc/sdccman.lyx: documented --syntax-only

2023-08-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/charconst.c,
	  support/regression/tests/wchar.c.in: disable for MacOS host test

2023-08-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-2855.c: disable for MacOS host test
	* support/regression/tests/charconst.c,
	  support/regression/tests/string.c,
	  support/regression/tests/wchar.c.in: work around missing uchar.h
	  on MacOS host test

2023-08-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: Remove unused/unbuilt simulators

2023-08-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c,
	  src/ds390/ralloc.c,
	  src/hc08/gen.c,
	  src/mcs51/gen.c,
	  src/mcs51/ralloc.c,
	  src/pdk/gen.c,
	  src/z80/gen.c:
	  Fix various bugs found by sanitizers.

2023-08-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCpeeph.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c: